logs/test_spot_risk_processor_~0
  File "Z:\uikitxv2\scripts\run_spot_risk_watcher.py", line 88
    watcher = SpotRiskWatcher(
    ^^^^^^^
SyntaxError: expected 'except' or 'finally' block
